--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,16 @@
          version="2.5"
          xmlns="http://java.sun.com/xml/ns/javaee">
 
-  <!-- Servlets -->
-  <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.mycompany.mywebapp.server.GreetingServiceImpl</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/mywebapp/greet</url-pattern>
-  </servlet-mapping>
+     <!--Servlets -->
+    <servlet>
+        <servlet-name>stockPriceServiceImpl</servlet-name>
+        <servlet-class>com.mycompany.mywebapp.server.StockPriceServiceImpl</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>stockPriceServiceImpl</servlet-name>
+        <url-pattern>/mywebapp/stockPrices</url-pattern>
+    </servlet-mapping>
   
   <!-- Default page to serve -->
   <welcome-file-list>
