--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,17 @@
         <servlet-name>stockPriceServiceImpl</servlet-name>
         <url-pattern>/mywebapp/stockPrices</url-pattern>
     </servlet-mapping>
-  
+
+    <servlet>
+        <servlet-name>jsonStockData</servlet-name>
+        <servlet-class>com.mycompany.mywebapp.server.JsonStockData</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>jsonStockData</servlet-name>
+        <url-pattern>/mywebapp/jsonStockPrices</url-pattern>
+    </servlet-mapping>
+
   <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>MyWebApp.html</welcome-file>
