--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-              http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5"
-         xmlns="http://java.sun.com/xml/ns/javaee">
+<web-app version="2.4"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+            http://java.sun.com/xml/ns/javaee/web-app_2_4.xsd">
 
-     <!--Servlets -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
     <servlet>
-        <servlet-name>stockPriceServiceImpl</servlet-name>
-        <servlet-class>com.mycompany.mywebapp.server.StockPriceServiceImpl</servlet-class>
+        <servlet-name>springGwtRemoteServiceServlet</servlet-name>
+        <servlet-class>org.spring4gwt.server.SpringGwtRemoteServiceServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>stockPriceServiceImpl</servlet-name>
-        <url-pattern>/mywebapp/stockPrices</url-pattern>
+        <servlet-name>springGwtRemoteServiceServlet</servlet-name>
+        <url-pattern>/hellogwt/springGwtServices/*</url-pattern>
     </servlet-mapping>
 
-    <servlet>
-        <servlet-name>jsonStockData</servlet-name>
-        <servlet-class>com.mycompany.mywebapp.server.JsonStockData</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>jsonStockData</servlet-name>
-        <url-pattern>/mywebapp/jsonStockPrices</url-pattern>
-    </servlet-mapping>
-
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>MyWebApp.html</welcome-file>
-  </welcome-file-list>
+    <welcome-file-list>
+        <welcome-file>HelloGWT.html</welcome-file>
+    </welcome-file-list>
 
 </web-app>
+
+
